# mimicrab

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  expectations.json  test-advanced.sh  test-local.sh  test-server.sh
.github/workflows/: ci.yml
book-src/: book.toml
book-src/src/: README.md  SUMMARY.md  admin-api.md
book-src/src/advanced/: README.md  jitter-proxy.md  lua-scripting.md  templating.md
book-src/src/deployment/: README.md  docker.md  kubernetes.md
book-src/src/examples/: README.md  basic-mock.md  lua-mock.md  templated-mock.md
book-src/src/features/: README.md  matching.md  metrics.md  responses.md
book-src/src/getting-started/: README.md  installation.md  quickstart.md
k8s/: configmap.yml  deployment.yml  rbac.yml  service.yml
src/: kubernetes.rs  main.rs  matcher.rs  metrics.rs  models.rs  templating.rs
tests/: advanced_matching_tests.rs  api_tests.rs  test_lua_ui.py  test_ui_flows.py  typed_template_tests.rs
ui/: app.js  index.html  style.css
