[package]
name = "mimicrab"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["full"] }
http-body-util = "0.1"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3"
tokio-stream = "0.1"
futures = "0.3"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19"
kube = { version = "0.91", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22", features = ["v1_28"] }
arc-swap = "1.7"
