[package]
name = "mimicrab"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["full"] }
http-body-util = "0.1"
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3"
futures = "0.3"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19"
kube = { version = "0.91", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22", features = ["v1_28"] }
arc-swap = "1.7"
bson = "2"
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2.0"
rand = "0.9.2"

[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }
